--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.1.7",
+    "hamburger-react": "^2.5.0",
     "lucide-react": "^0.373.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.3.2",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
