--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "^3.2.0",
     "@uploadthing/react": "^6.5.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.2",
@@ -29,7 +30,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.17",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
